--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -2,18 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix, precision_score, recall_score, f1_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,8 +102,6 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "model = LogisticRegression(solver=\"sag\")\n",
     "model.fit(X_train, Y_train)\n",
@@ -151,7 +152,6 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import confusion_matrix, precision_score, recall_score, f1_scoretest)\n",
     "recall_scor = recall_score(test_prediction, Y_test)\n",
     "f1_scor = f1_score(test_prediction, Y_test)\n",
     "\n",
@@ -690,6 +690,511 @@
    "metadata": {},
    "source": [
     "pretty bad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Best run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "import re\n",
+    "import nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def swap_columns(df, col1, col2):\n",
+    "    col_list = list(df.columns)\n",
+    "    x, y = col_list.index(col1), col_list.index(col2)\n",
+    "    col_list[y], col_list[x] = col_list[x], col_list[y]\n",
+    "    df = df[col_list]\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_punctuations(text):\n",
+    "    for punctuation in string.punctuation:\n",
+    "        text = text.replace(punctuation, '')\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Email_dataset = pd.read_csv(data_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Email_dataset = Email_dataset.drop('Unnamed: 0', axis=1)\n",
+    "Email_dataset = Email_dataset.drop('label', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subjects = []\n",
+    "for i in range(len(Email_dataset)):\n",
+    "    ln = Email_dataset[\"text\"][i]\n",
+    "    line = \"\"\n",
+    "    for i in ln:\n",
+    "        if(i == '\\r'):\n",
+    "            break\n",
+    "        line = line + i\n",
+    "    line = line.replace(\"Subject\" , \"\")\n",
+    "    subjects.append(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Email_dataset['Subject'] = subjects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Email_dataset.columns = [\"Email_text\" , \"Labels\" , \"Email_Subject\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Email_text</th>\n",
+       "      <th>Labels</th>\n",
+       "      <th>Email_Subject</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Subject: enron methanol ; meter # : 988291\\r\\n...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>: enron methanol ; meter # : 988291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Subject: hpl nom for january 9 , 2001\\r\\n( see...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>: hpl nom for january 9 , 2001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Subject: neon retreat\\r\\nho ho ho , we ' re ar...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>: neon retreat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Subject: photoshop , windows , office . cheap ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>: photoshop , windows , office . cheap . main ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Subject: re : indian springs\\r\\nthis deal is t...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>: re : indian springs</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          Email_text  Labels  \\\n",
+       "0  Subject: enron methanol ; meter # : 988291\\r\\n...       0   \n",
+       "1  Subject: hpl nom for january 9 , 2001\\r\\n( see...       0   \n",
+       "2  Subject: neon retreat\\r\\nho ho ho , we ' re ar...       0   \n",
+       "3  Subject: photoshop , windows , office . cheap ...       1   \n",
+       "4  Subject: re : indian springs\\r\\nthis deal is t...       0   \n",
+       "\n",
+       "                                       Email_Subject  \n",
+       "0                : enron methanol ; meter # : 988291  \n",
+       "1                     : hpl nom for january 9 , 2001  \n",
+       "2                                     : neon retreat  \n",
+       "3  : photoshop , windows , office . cheap . main ...  \n",
+       "4                              : re : indian springs  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Email_dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Email_dataset = swap_columns(Email_dataset, 'Labels', 'Email_Subject')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Email_text</th>\n",
+       "      <th>Email_Subject</th>\n",
+       "      <th>Labels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Subject: enron methanol ; meter # : 988291\\r\\n...</td>\n",
+       "      <td>: enron methanol ; meter # : 988291</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Subject: hpl nom for january 9 , 2001\\r\\n( see...</td>\n",
+       "      <td>: hpl nom for january 9 , 2001</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Subject: neon retreat\\r\\nho ho ho , we ' re ar...</td>\n",
+       "      <td>: neon retreat</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Subject: photoshop , windows , office . cheap ...</td>\n",
+       "      <td>: photoshop , windows , office . cheap . main ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Subject: re : indian springs\\r\\nthis deal is t...</td>\n",
+       "      <td>: re : indian springs</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          Email_text  \\\n",
+       "0  Subject: enron methanol ; meter # : 988291\\r\\n...   \n",
+       "1  Subject: hpl nom for january 9 , 2001\\r\\n( see...   \n",
+       "2  Subject: neon retreat\\r\\nho ho ho , we ' re ar...   \n",
+       "3  Subject: photoshop , windows , office . cheap ...   \n",
+       "4  Subject: re : indian springs\\r\\nthis deal is t...   \n",
+       "\n",
+       "                                       Email_Subject  Labels  \n",
+       "0                : enron methanol ; meter # : 988291       0  \n",
+       "1                     : hpl nom for january 9 , 2001       0  \n",
+       "2                                     : neon retreat       0  \n",
+       "3  : photoshop , windows , office . cheap . main ...       1  \n",
+       "4                              : re : indian springs       0  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Email_dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /home/qwas/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to /home/qwas/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt_tab to /home/qwas/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('punkt')\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('punkt_tab')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Email_dataset['Combined_Text'] = Email_dataset['Email_Subject'] + \" \" + Email_dataset['Email_text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_text(text):\n",
+    "    # Lowercase\n",
+    "    text = text.lower()\n",
+    "    # Remove punctuation and numbers\n",
+    "    text = re.sub(r'[^\\w\\s]', '', text)\n",
+    "    text = re.sub(r'\\d+', '', text)\n",
+    "    # Tokenize\n",
+    "    tokens = word_tokenize(text)\n",
+    "    # Remove stopwords\n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    tokens = [word for word in tokens if word not in stop_words]\n",
+    "    return ' '.join(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Email_dataset['Cleaned_Text'] = Email_dataset['Combined_Text'].apply(preprocess_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf_vectorizer = TfidfVectorizer(max_features=500)\n",
+    "X = tfidf_vectorizer.fit_transform(Email_dataset['Cleaned_Text']).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = Email_dataset['Labels'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored on calling ctypes callback function: <function ThreadpoolController._find_libraries_with_dl_iterate_phdr.<locals>.match_library_callback at 0x7f7693acd760>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/qwas/miniconda3/lib/python3.12/site-packages/threadpoolctl.py\", line 1005, in match_library_callback\n",
+      "    self._make_controller_from_path(filepath)\n",
+      "  File \"/home/qwas/miniconda3/lib/python3.12/site-packages/threadpoolctl.py\", line 1175, in _make_controller_from_path\n",
+      "    lib_controller = controller_class(\n",
+      "                     ^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/qwas/miniconda3/lib/python3.12/site-packages/threadpoolctl.py\", line 114, in __init__\n",
+      "    self.dynlib = ctypes.CDLL(filepath, mode=_RTLD_NOLOAD)\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/qwas/miniconda3/lib/python3.12/ctypes/__init__.py\", line 379, in __init__\n",
+      "    self._handle = _dlopen(self._name, mode)\n",
+      "                   ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "OSError: /home/qwas/miniconda3/lib/python3.12/site-packages/scipy.libs/libscipy_openblas-c128ec02.so: cannot open shared object file: No such file or directory\n"
+     ]
+    }
+   ],
+   "source": [
+    "smote = SMOTE(random_state=42)\n",
+    "X_train_smote, y_train_smote = smote.fit_resample(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before SMOTE: (4136, 500) (4136,)\n",
+      "After SMOTE: (5860, 500) (5860,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Before SMOTE:\", X_train.shape, y_train.shape)\n",
+    "print(\"After SMOTE:\", X_train_smote.shape, y_train_smote.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LogisticRegression(solver=\"sag\")\n",
+    "model.fit(X_train_smote, y_train_smote)\n",
+    "train_prediction = model.predict(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for Testing is: 95.84541062801932\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_prediction = model.predict(X_test)\n",
+    "test_accuracy = accuracy_score(test_prediction, y_test)\n",
+    "print('Accuracy for Testing is:', test_accuracy * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "precision score: 0.9692832764505119\n",
+      "recall score: 0.8930817610062893\n",
+      "f1 score: 0.9296235679214403\n",
+      "[[2802    6]\n",
+      " [ 128 1200]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "recall_scor = recall_score(test_prediction, y_test)\n",
+    "f1_scor = f1_score(test_prediction, y_test)\n",
+    "precision_score = precision_score(test_prediction, y_test)\n",
+    "\n",
+    "print(f'precision score: {precision_score}')\n",
+    "print(f'recall score: {recall_scor}')\n",
+    "print(f'f1 score: {f1_scor}')\n",
+    "\n",
+    "print(confusion_matrix(train_prediction, y_train))"
    ]
   }
  ],
