--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy for Validation is: 91.06280193236715\n"
+      "Accuracy for Validation is: 91.30434782608695\n"
      ]
     },
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -145,15 +145,14 @@
       "recall score: 0.9483568075117371\n",
       "f1 score: 0.7984189723320159\n",
       "[[2591  303]\n",
-      " [  46  782]]\n",
-      "[[731  91]\n",
-      " [ 11 202]]\n"
+      " [  46  782]]\n"
      ]
     }
    ],
    "source": [
     "recall_scor = recall_score(test_prediction, Y_test)\n",
     "f1_scor = f1_score(test_prediction, Y_test)\n",
+    "prec_scor = precision_score(test_prediction, Y_test)\n",
     "\n",
     "print(f'precision score: {prec_scor}')\n",
     "print(f'recall score: {recall_scor}')\n",
@@ -164,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +358,7 @@
        " 'yourselves'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -465,8 +464,8 @@
       "precision score: 0.689419795221843\n",
       "recall score: 0.886435331230284\n",
       "f1 score: 0.921311475409836\n",
-      "[[2480   20]\n",
-      " [ 157 1065]]\n"
+      "[[2479   20]\n",
+      " [ 158 1065]]\n"
      ]
     }
    ],
@@ -490,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -564,8 +563,8 @@
       "precision score: 0.689419795221843\n",
       "recall score: 0.8940397350993378\n",
       "f1 score: 0.907563025210084\n",
-      "[[2469   54]\n",
-      " [ 168 1031]]\n"
+      "[[2469   52]\n",
+      " [ 168 1033]]\n"
      ]
     }
    ],
@@ -596,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -669,8 +668,8 @@
       "precision score: 0.689419795221843\n",
       "recall score: 0.6525612472160356\n",
       "f1 score: 0.7897574123989218\n",
-      "[[2025    0]\n",
-      " [ 612 1085]]\n"
+      "[[2028    0]\n",
+      " [ 609 1085]]\n"
      ]
     }
    ],
@@ -701,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +878,7 @@
        "4                              : re : indian springs  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +978,7 @@
        "4                              : re : indian springs       0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1001,7 @@
       "[nltk_data] Downloading package stopwords to /home/qwas/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
       "[nltk_data] Downloading package punkt_tab to /home/qwas/nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
+      "[nltk_data]   Package punkt_tab is already up-to-date!\n"
      ]
     },
     {
@@ -1011,7 +1010,7 @@
        "True"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,30 +1089,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored on calling ctypes callback function: <function ThreadpoolController._find_libraries_with_dl_iterate_phdr.<locals>.match_library_callback at 0x7f7693acd760>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/qwas/miniconda3/lib/python3.12/site-packages/threadpoolctl.py\", line 1005, in match_library_callback\n",
-      "    self._make_controller_from_path(filepath)\n",
-      "  File \"/home/qwas/miniconda3/lib/python3.12/site-packages/threadpoolctl.py\", line 1175, in _make_controller_from_path\n",
-      "    lib_controller = controller_class(\n",
-      "                     ^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/qwas/miniconda3/lib/python3.12/site-packages/threadpoolctl.py\", line 114, in __init__\n",
-      "    self.dynlib = ctypes.CDLL(filepath, mode=_RTLD_NOLOAD)\n",
-      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/qwas/miniconda3/lib/python3.12/ctypes/__init__.py\", line 379, in __init__\n",
-      "    self._handle = _dlopen(self._name, mode)\n",
-      "                   ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "OSError: /home/qwas/miniconda3/lib/python3.12/site-packages/scipy.libs/libscipy_openblas-c128ec02.so: cannot open shared object file: No such file or directory\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "smote = SMOTE(random_state=42)\n",
     "X_train_smote, y_train_smote = smote.fit_resample(X_train, y_train)"
@@ -1121,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
